refine real_estate_database.py

--- a/main2.ipynb
+++ b/main2.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "from utils import Database\n",
+    "from real_estate_database import Database\n",
     "from utils_2 import RealEstateConversations"
    ]
   },
@@ -22,11 +22,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "collection_names: ['real_estate_listings_v2', 'real_estate_listings', 'real_estate_listings_v3']\n",
-      "*** Get 'real_estate_listings_v3' collection ***\n",
-      "Number of Documents: 30\n",
-      "No. of data: 30\n",
-      "Number of Documents: 30\n"
+      "Available collections: ['real_estate_listings_v2', 'real_estate_listings', 'real_estate_listings_v3']\n",
+      "*** Retrieving existing collection: 'real_estate_listings_v3' ***\n",
+      "Number of documents in collection: 30\n",
+      "Loaded 30 records\n",
+      "Embedding function set up with model: text-embedding-3-small\n",
+      "Number of documents in collection: 30\n"
      ]
     }
    ],
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "8c85394c",
    "metadata": {},
    "outputs": [
@@ -80,17 +81,19 @@
       "text/plain": [
        "{'bedrooms': 4,\n",
        " 'bathrooms': 3,\n",
-       " 'property_type': None,\n",
+       " 'property_type': 'suburban home',\n",
        " 'area_min_sqft': None,\n",
        " 'area_max_sqft': None,\n",
        " 'building_max_age': None,\n",
        " 'building_min_year': None,\n",
-       " 'amenities': ['Large backyard', 'Garage for two cars', 'Modern kitchen'],\n",
+       " 'amenities': ['large backyard', 'garage for two cars', 'modern kitchen'],\n",
        " 'furnished': False,\n",
        " 'location': None,\n",
-       " 'neighborhood_features': ['Safe', 'Family-friendly', 'Good schools'],\n",
+       " 'neighborhood_features': ['safe area',\n",
+       "  'family-friendly area',\n",
+       "  'good schools nearby'],\n",
        " 'transportation': [],\n",
-       " 'parking_required': False,\n",
+       " 'parking_required': True,\n",
        " 'pet_friendly_required': False,\n",
        " 'min_budget': 500000,\n",
        " 'max_budget': 700000}"
@@ -105,13 +108,13 @@
      "text": [
       "\n",
       "========== Query Text ==========\n",
-      "- Property type: None\n",
-      "- Amenities: Large backyard, Garage for two cars, Modern kitchen\n",
+      "- Property type: suburban home\n",
+      "- Amenities: large backyard, garage for two cars, modern kitchen\n",
       "- Furnished: No\n",
       "- Location: Any\n",
-      "- Neighborhood features: Safe, Family-friendly, Good schools\n",
+      "- Neighborhood features: safe area, family-friendly area, good schools nearby\n",
       "- Transportation preferences: Any\n",
-      "- Parking required: No\n",
+      "- Parking required: Yes\n",
       "- Pet friendly required: No\n",
       "\n",
       "========== Filter Conditions ==========\n"
@@ -149,20 +152,20 @@
        " 'uris': None,\n",
        " 'included': ['metadatas', 'documents', 'distances'],\n",
        " 'data': None,\n",
-       " 'metadatas': [[{'listed_date': '2025-03-25',\n",
-       "    'price': 715000,\n",
-       "    'bathrooms': 3.0,\n",
+       " 'metadatas': [[{'bedrooms': 4,\n",
        "    'location': 'Austin, TX',\n",
-       "    'bedrooms': 4,\n",
-       "    'id': 2,\n",
-       "    'neighborhood': 'Suburban',\n",
-       "    'title': 'Spacious 4-Bedroom House with Garden',\n",
        "    'year_built': 2015,\n",
-       "    'property_type': 'House',\n",
-       "    'area_sqft': 2100,\n",
+       "    'listed_date': '2025-03-25',\n",
+       "    'bathrooms': 3.0,\n",
+       "    'title': 'Spacious 4-Bedroom House with Garden',\n",
        "    'neighborhood_description': 'Located in a quiet suburban neighborhood in Austin, TX, this house is close to excellent schools, parks, and shopping centers. The area is family-friendly with a tight-knit community and is just a short drive to downtown Austin for easy access to work and entertainment.',\n",
-       "    'description': 'This spacious 4-bedroom, 3-bathroom house offers a large backyard perfect for outdoor activities, a renovated kitchen with modern finishes, and a 2-car garage. The open-concept living and dining area flows seamlessly into the backyard patio, ideal for entertaining. The master suite includes a walk-in closet and en-suite bathroom with a soaking tub and separate shower.'}]],\n",
-       " 'distances': [[1.1384844779968262]]}"
+       "    'id': 2,\n",
+       "    'area_sqft': 2100,\n",
+       "    'description': 'This spacious 4-bedroom, 3-bathroom house offers a large backyard perfect for outdoor activities, a renovated kitchen with modern finishes, and a 2-car garage. The open-concept living and dining area flows seamlessly into the backyard patio, ideal for entertaining. The master suite includes a walk-in closet and en-suite bathroom with a soaking tub and separate shower.',\n",
+       "    'price': 715000,\n",
+       "    'neighborhood': 'Suburban',\n",
+       "    'property_type': 'House'}]],\n",
+       " 'distances': [[1.076448678970337]]}"
       ]
      },
      "metadata": {},
@@ -202,14 +205,16 @@
     "conv = RealEstateConversations(conv_json_path, verbose=verbose)\n",
     "obj = conv.get_query_and_conditions(conv_id)\n",
     "\n",
+    "\n",
+    "# TODO: add feature to relax constraints\n",
     "a, b = obj\n",
     "b[4]['price']['$lte'] = 1000000\n",
     "\n",
     "print(b)\n",
     "print()\n",
     "\n",
-    "query_outputs = database.query_db(*obj, n_results=n_results)\n",
-    "database.display_query_outputs(query_outputs)"
+    "query_outputs = database.query(*obj, n_results=n_results)\n",
+    "database.display_results(query_outputs)"
    ]
   },
   {
