refine real_estate_conversations.py

--- a/main2.ipynb
+++ b/main2.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "from pathlib import Path\n",
     "from real_estate_database import Database\n",
-    "from utils_2 import RealEstateConversations"
+    "from real_estate_conversations import RealEstateConversations"
    ]
   },
   {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "8c85394c",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,6 @@
       "Agent: Do you have a budget range in mind?\n",
       "Buyer: Somewhere between $500,000 and $700,000.\n",
       "\n",
-      "\n",
       "========== Buyer Preferences ==========\n"
      ]
     },
@@ -80,18 +79,16 @@
      "data": {
       "text/plain": [
        "{'bedrooms': 4,\n",
-       " 'bathrooms': 3,\n",
-       " 'property_type': 'suburban home',\n",
+       " 'bathrooms': 3.0,\n",
+       " 'property_type': 'home',\n",
        " 'area_min_sqft': None,\n",
        " 'area_max_sqft': None,\n",
        " 'building_max_age': None,\n",
        " 'building_min_year': None,\n",
        " 'amenities': ['large backyard', 'garage for two cars', 'modern kitchen'],\n",
        " 'furnished': False,\n",
-       " 'location': None,\n",
-       " 'neighborhood_features': ['safe area',\n",
-       "  'family-friendly area',\n",
-       "  'good schools nearby'],\n",
+       " 'location': 'suburban',\n",
+       " 'neighborhood_features': ['safe', 'family-friendly', 'good schools nearby'],\n",
        " 'transportation': [],\n",
        " 'parking_required': True,\n",
        " 'pet_friendly_required': False,\n",
@@ -108,11 +105,11 @@
      "text": [
       "\n",
       "========== Query Text ==========\n",
-      "- Property type: suburban home\n",
+      "- Property type: home\n",
       "- Amenities: large backyard, garage for two cars, modern kitchen\n",
       "- Furnished: No\n",
-      "- Location: Any\n",
-      "- Neighborhood features: safe area, family-friendly area, good schools nearby\n",
+      "- Location: suburban\n",
+      "- Neighborhood features: safe, family-friendly, good schools nearby\n",
       "- Transportation preferences: Any\n",
       "- Parking required: Yes\n",
       "- Pet friendly required: No\n",
@@ -152,20 +149,20 @@
        " 'uris': None,\n",
        " 'included': ['metadatas', 'documents', 'distances'],\n",
        " 'data': None,\n",
-       " 'metadatas': [[{'bedrooms': 4,\n",
+       " 'metadatas': [[{'listed_date': '2025-03-25',\n",
        "    'location': 'Austin, TX',\n",
-       "    'year_built': 2015,\n",
-       "    'listed_date': '2025-03-25',\n",
        "    'bathrooms': 3.0,\n",
+       "    'price': 715000,\n",
        "    'title': 'Spacious 4-Bedroom House with Garden',\n",
-       "    'neighborhood_description': 'Located in a quiet suburban neighborhood in Austin, TX, this house is close to excellent schools, parks, and shopping centers. The area is family-friendly with a tight-knit community and is just a short drive to downtown Austin for easy access to work and entertainment.',\n",
+       "    'description': 'This spacious 4-bedroom, 3-bathroom house offers a large backyard perfect for outdoor activities, a renovated kitchen with modern finishes, and a 2-car garage. The open-concept living and dining area flows seamlessly into the backyard patio, ideal for entertaining. The master suite includes a walk-in closet and en-suite bathroom with a soaking tub and separate shower.',\n",
+       "    'neighborhood': 'Suburban',\n",
+       "    'year_built': 2015,\n",
+       "    'property_type': 'House',\n",
        "    'id': 2,\n",
        "    'area_sqft': 2100,\n",
-       "    'description': 'This spacious 4-bedroom, 3-bathroom house offers a large backyard perfect for outdoor activities, a renovated kitchen with modern finishes, and a 2-car garage. The open-concept living and dining area flows seamlessly into the backyard patio, ideal for entertaining. The master suite includes a walk-in closet and en-suite bathroom with a soaking tub and separate shower.',\n",
-       "    'price': 715000,\n",
-       "    'neighborhood': 'Suburban',\n",
-       "    'property_type': 'House'}]],\n",
-       " 'distances': [[1.076448678970337]]}"
+       "    'neighborhood_description': 'Located in a quiet suburban neighborhood in Austin, TX, this house is close to excellent schools, parks, and shopping centers. The area is family-friendly with a tight-knit community and is just a short drive to downtown Austin for easy access to work and entertainment.',\n",
+       "    'bedrooms': 4}]],\n",
+       " 'distances': [[1.0891661643981934]]}"
       ]
      },
      "metadata": {},
@@ -203,7 +200,7 @@
     "\n",
     "\n",
     "conv = RealEstateConversations(conv_json_path, verbose=verbose)\n",
-    "obj = conv.get_query_and_conditions(conv_id)\n",
+    "obj = conv.get_query_text_and_conditions(conv_id)\n",
     "\n",
     "\n",
     "# TODO: add feature to relax constraints\n",
