--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "74f89568",
    "metadata": {},
    "outputs": [],
@@ -14,13 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "52f84e04",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Parameters for conversation retrieval\n",
-    "conv_id = 2\n",
+    "conv_id = 1\n",
     "\n",
     "# Number of results to retrieve from the database\n",
     "n_results = 1\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7429cb79",
    "metadata": {},
    "outputs": [],
@@ -52,186 +52,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "69c9e94d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Available collections: ['real_estate_listings_v2', 'real_estate_listings', 'real_estate_listings_v3']\n",
-      "*** Retrieving existing collection: 'real_estate_listings_v3' ***\n",
-      "Number of documents in collection: 30\n",
-      "Loaded 30 records\n",
-      "Embedding function set up with model: text-embedding-3-small\n",
-      "Number of documents in collection: 30\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize the real estate database\n",
     "database = Database(persist_directory, collection_name, delete_flag=delete_flag, verbose=verbose)\n",
-    "database.add_data(catalog_json_path, embed_model=embed_model)"
+    "database.add_data(catalog_json_path, embed_model=embed_model)\n",
+    "\n",
+    "# Initialize the real estate conversations\n",
+    "conv = RealEstateConversations(conv_json_path, verbose=verbose)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "68537eb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_results = 3\n",
+    "max_relaxation_level = 5\n",
+    "\n",
+    "\n",
+    "_ = conv.query_with_progressive_relaxation(conv_id, database, n_results=n_results, max_relaxation_level=max_relaxation_level)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8c85394c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Conversation IDs: [1, 2, 3, 99, 100] \n",
-      "\n",
-      "========== Conversation 2 ==========\n",
-      "Agent: Hello! What kind of property are you looking for today?\n",
-      "Buyer: I'm looking for a spacious suburban home for my family.\n",
-      "Agent: Great! How many bedrooms and bathrooms do you need?\n",
-      "Buyer: At least 4 bedrooms and 3 bathrooms.\n",
-      "Agent: Are there any specific amenities you want in the house?\n",
-      "Buyer: A large backyard, a garage for two cars, and a modern kitchen would be ideal.\n",
-      "Agent: What about the neighborhood? Any preferences?\n",
-      "Buyer: A safe, family-friendly area with good schools nearby.\n",
-      "Agent: Do you have a budget range in mind?\n",
-      "Buyer: Somewhere between $500,000 and $700,000.\n",
-      "\n",
-      "========== Buyer Preferences ==========\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'bedrooms': 4,\n",
-       " 'bathrooms': 3.0,\n",
-       " 'property_type': 'suburban home',\n",
-       " 'area_min_sqft': None,\n",
-       " 'area_max_sqft': None,\n",
-       " 'building_max_age': None,\n",
-       " 'building_min_year': None,\n",
-       " 'amenities': ['large backyard', 'garage for two cars', 'modern kitchen'],\n",
-       " 'furnished': False,\n",
-       " 'location': 'suburban',\n",
-       " 'neighborhood_features': ['safe', 'family-friendly', 'good schools'],\n",
-       " 'transportation': [],\n",
-       " 'parking_required': True,\n",
-       " 'pet_friendly_required': False,\n",
-       " 'min_budget': 500000,\n",
-       " 'max_budget': 700000}"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "========== Query Text ==========\n",
-      "- Property type: suburban home\n",
-      "- Amenities: large backyard, garage for two cars, modern kitchen\n",
-      "- Furnished: No\n",
-      "- Location: suburban\n",
-      "- Neighborhood features: safe, family-friendly, good schools\n",
-      "- Transportation preferences: Any\n",
-      "- Parking required: Yes\n",
-      "- Pet friendly required: No\n",
-      "\n",
-      "========== Filter Conditions ==========\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'bedrooms': 4},\n",
-       " {'bathrooms': {'$gte': 2.0}},\n",
-       " {'bathrooms': {'$lte': 4.0}},\n",
-       " {'price': {'$gte': 500000}},\n",
-       " {'price': {'$lte': 700000}}]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[{'bedrooms': 4}, {'bathrooms': {'$gte': 2.0}}, {'bathrooms': {'$lte': 4.0}}, {'price': {'$gte': 500000}}, {'price': {'$lte': 1000000}}]\n",
-      "\n",
-      "========== Query Outputs ==========\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'ids': [['2']],\n",
-       " 'embeddings': None,\n",
-       " 'documents': [['Spacious 4-Bedroom House with Garden. This spacious 4-bedroom, 3-bathroom house offers a large backyard perfect for outdoor activities, a renovated kitchen with modern finishes, and a 2-car garage. The open-concept living and dining area flows seamlessly into the backyard patio, ideal for entertaining. The master suite includes a walk-in closet and en-suite bathroom with a soaking tub and separate shower. Neighborhood info: Located in a quiet suburban neighborhood in Austin, TX, this house is close to excellent schools, parks, and shopping centers. The area is family-friendly with a tight-knit community and is just a short drive to downtown Austin for easy access to work and entertainment.. Location: Austin, TX, Neighborhood: Suburban. Type: House, Bedrooms: 4, Bathrooms: 3.0, Area: 2100 sqft, Year built: 2015, Price: $715000.']],\n",
-       " 'uris': None,\n",
-       " 'included': ['metadatas', 'documents', 'distances'],\n",
-       " 'data': None,\n",
-       " 'metadatas': [[{'bedrooms': 4,\n",
-       "    'listed_date': '2025-03-25',\n",
-       "    'price': 715000,\n",
-       "    'neighborhood': 'Suburban',\n",
-       "    'area_sqft': 2100,\n",
-       "    'id': 2,\n",
-       "    'neighborhood_description': 'Located in a quiet suburban neighborhood in Austin, TX, this house is close to excellent schools, parks, and shopping centers. The area is family-friendly with a tight-knit community and is just a short drive to downtown Austin for easy access to work and entertainment.',\n",
-       "    'location': 'Austin, TX',\n",
-       "    'description': 'This spacious 4-bedroom, 3-bathroom house offers a large backyard perfect for outdoor activities, a renovated kitchen with modern finishes, and a 2-car garage. The open-concept living and dining area flows seamlessly into the backyard patio, ideal for entertaining. The master suite includes a walk-in closet and en-suite bathroom with a soaking tub and separate shower.',\n",
-       "    'title': 'Spacious 4-Bedroom House with Garden',\n",
-       "    'bathrooms': 3.0,\n",
-       "    'year_built': 2015,\n",
-       "    'property_type': 'House'}]],\n",
-       " 'distances': [[1.0916154384613037]]}"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "========== Rank-1 ==========\n",
-      "Property ID: 2\n",
-      "Title: Spacious 4-Bedroom House with Garden\n",
-      "Description: This spacious 4-bedroom, 3-bathroom house offers a large backyard perfect for outdoor activities, a renovated kitchen with modern finishes, and a 2-car garage. The open-concept living and dining area flows seamlessly into the backyard patio, ideal for entertaining. The master suite includes a walk-in closet and en-suite bathroom with a soaking tub and separate shower.\n",
-      "Neighborhood Info: Located in a quiet suburban neighborhood in Austin, TX, this house is close to excellent schools, parks, and shopping centers. The area is family-friendly with a tight-knit community and is just a short drive to downtown Austin for easy access to work and entertainment.\n",
-      "Location: Austin, TX\n",
-      "Neighborhood: Suburban\n",
-      "Property Type: House\n",
-      "Year Built: 2015 CE\n",
-      "Price: $715,000\n",
-      "Bedrooms: 4\n",
-      "Bathroom: 3.0\n",
-      "Area: 2100 sq.ft.\n",
-      "Listed Date: 2025-03-25\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "conv = RealEstateConversations(conv_json_path, verbose=verbose)\n",
-    "obj = conv.get_query_text_and_conditions(conv_id)\n",
+    "query_obj = conv.get_query_text_and_conditions(conv_id)\n",
     "\n",
     "\n",
     "# TODO: add feature to relax constraints\n",
-    "a, b = obj\n",
+    "a, b = query_obj\n",
     "b[4]['price']['$lte'] = 1000000\n",
     "\n",
     "print(b)\n",
     "print()\n",
     "\n",
-    "query_outputs = database.query(*obj, n_results=n_results)\n",
+    "query_outputs = database.query(*query_obj, n_results=n_results)\n",
     "database.display_results(query_outputs)"
    ]
   },
