--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "74f89568",
    "metadata": {},
    "outputs": [],
@@ -19,20 +19,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Parameters for conversation retrieval\n",
-    "conv_id = 1\n",
+    "# Conversation id of agent-buyer to be used (chosen from {1, 2, 3, ..., 6})\n",
+    "conv_id = 5\n",
     "\n",
-    "# Number of results to retrieve from the database\n",
-    "n_results = 1\n",
+    "\n",
+    "# Retrieval parameters\n",
+    "n_results = 3  # Number of results to retrieve from the database\n",
+    "max_relaxation_level = 5  # Maximum number of condition relaxation iterations\n",
     "\n",
     "# Configuration parameters\n",
     "delete_flag = False\n",
-    "verbose = True"
+    "verbose = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7429cb79",
    "metadata": {},
    "outputs": [],
@@ -52,52 +54,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "69c9e94d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*** Retrieving existing collection: 'real_estate_listings_v3' ***\n",
+      "Number of documents in collection: 30\n",
+      "Loaded 30 records\n",
+      "Number of documents in collection: 30\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize the real estate database\n",
     "database = Database(persist_directory, collection_name, delete_flag=delete_flag, verbose=verbose)\n",
-    "database.add_data(catalog_json_path, embed_model=embed_model)\n",
-    "\n",
-    "# Initialize the real estate conversations\n",
-    "conv = RealEstateConversations(conv_json_path, verbose=verbose)"
+    "# Add real estate data into the database\n",
+    "database.add_data(catalog_json_path, embed_model=embed_model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "68537eb2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conversation IDs: [1, 2, 3, 4, 5, 6, 99, 100] \n",
+      "\n",
+      "=================================== \n",
+      "Relaxation Level 0: Querying ...\n",
+      "=================================== \n",
+      "Relaxation Level 1: Querying ...\n",
+      "=================================== \n",
+      "Relaxation Level 2: Querying ...\n",
+      "=================================== \n",
+      "Relaxation Level 3: Querying ...\n",
+      "=================================== \n",
+      "Relaxation Level 4: Querying ...\n",
+      "=================================== \n",
+      "Relaxation Level 5: Querying ...\n",
+      "========== Query Results ==========\n",
+      "No results found.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "n_results = 3\n",
-    "max_relaxation_level = 5\n",
-    "\n",
-    "\n",
+    "# Initialize the real estate conversations\n",
+    "conv = RealEstateConversations(conv_json_path, verbose=verbose)\n",
+    "# Retrieve matched real estates based on the conversation\n",
     "_ = conv.query_with_progressive_relaxation(conv_id, database, n_results=n_results, max_relaxation_level=max_relaxation_level)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c85394c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query_obj = conv.get_query_text_and_conditions(conv_id)\n",
-    "\n",
-    "\n",
-    "# TODO: add feature to relax constraints\n",
-    "a, b = query_obj\n",
-    "b[4]['price']['$lte'] = 1000000\n",
-    "\n",
-    "print(b)\n",
-    "print()\n",
-    "\n",
-    "query_outputs = database.query(*query_obj, n_results=n_results)\n",
-    "database.display_results(query_outputs)"
    ]
   },
   {
