--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "52f84e04",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Conversation IDs: [1, 2, 3, 4, 5, 6, 99, 100] \n",
+      "Conversation IDs: [1, 2, 3, 4, 5, 6] \n",
+      "\n",
+      "========== Conversation 5 ==========\n",
+      "Agent: Hi! What kind of property are you interested in?\n",
+      "Buyer: I’m looking for a luxury villa with a lot of space.\n",
+      "Agent: How many bedrooms and bathrooms do you prefer?\n",
+      "Buyer: At least 5 bedrooms and 4 bathrooms.\n",
+      "Agent: Any must-have amenities?\n",
+      "Buyer: A swimming pool, home theater, and large garden.\n",
+      "Agent: Do you have a preferred location or neighborhood?\n",
+      "Buyer: Somewhere quiet but not too far from the city center.\n",
+      "Agent: What’s your budget range?\n",
+      "Buyer: Above $1,000,000.\n",
       "\n",
       "=================================== \n",
       "Relaxation Level 0: Querying ...\n",
@@ -94,14 +106,53 @@
       "Relaxation Level 1: Querying ...\n",
       "=================================== \n",
       "Relaxation Level 2: Querying ...\n",
-      "=================================== \n",
-      "Relaxation Level 3: Querying ...\n",
-      "=================================== \n",
-      "Relaxation Level 4: Querying ...\n",
-      "=================================== \n",
-      "Relaxation Level 5: Querying ...\n",
-      "========== Query Results ==========\n",
-      "No results found.\n",
+      "========== Rank-1 ==========\n",
+      "Property ID: 25\n",
+      "Title: Luxury 5-Bedroom Villa with Infinity Pool and Ocean Views\n",
+      "Description: This exquisite 5-bedroom, 5-bathroom villa offers luxurious living with breathtaking ocean views. The property features an infinity pool, a hot tub, and expansive outdoor living areas perfect for entertaining. Inside, the villa boasts a chef’s kitchen, an expansive living room with panoramic windows, and a master suite with a private balcony. The property also includes a wine cellar, home gym, and a private movie theater.\n",
+      "Neighborhood Info: Situated in a prime location along the coast of Malibu, California, this villa offers privacy and seclusion while being close to world-renowned beaches, restaurants, and shopping. The neighborhood is known for its luxurious homes and tranquil atmosphere.\n",
+      "Location: Malibu, CA\n",
+      "Neighborhood: Coastal Luxury\n",
+      "Property Type: Villa\n",
+      "Year Built: 2018 CE\n",
+      "Price: $8,500,000\n",
+      "Bedrooms: 5\n",
+      "Bathroom: 5.0\n",
+      "Area: 7500 sq.ft.\n",
+      "Listed Date: 2025-04-19\n",
+      "\n",
+      "\n",
+      "========== Rank-2 ==========\n",
+      "Property ID: 8\n",
+      "Title: 5-Bedroom Family Home on Cul-de-Sac\n",
+      "Description: This spacious 5-bedroom, 4-bathroom family home offers a finished basement, a large backyard, and a quiet cul-de-sac location. The home features a formal living room, a family room with a fireplace, and an updated kitchen with modern appliances. The fenced yard provides privacy and is perfect for outdoor activities.\n",
+      "Neighborhood Info: Located in a family-friendly neighborhood in Denver, CO, this home is situated on a quiet cul-de-sac, offering peace and privacy. The neighborhood is known for its excellent schools, parks, and nearby shopping centers, making it an ideal location for families.\n",
+      "Location: Denver, CO\n",
+      "Neighborhood: Cul-de-Sac\n",
+      "Property Type: House\n",
+      "Year Built: 2005 CE\n",
+      "Price: $830,000\n",
+      "Bedrooms: 5\n",
+      "Bathroom: 4.0\n",
+      "Area: 2800 sq.ft.\n",
+      "Listed Date: 2025-03-29\n",
+      "\n",
+      "\n",
+      "========== Rank-3 ==========\n",
+      "Property ID: 28\n",
+      "Title: 5-Bedroom Smart Home with Automated Features\n",
+      "Description: This state-of-the-art 5-bedroom, 4-bathroom smart home features the latest home automation technology, including voice-activated lighting, security systems, and climate control. The home also has a home theater room, an indoor swimming pool, and a fully equipped kitchen with smart appliances. The garage has electric car charging stations.\n",
+      "Neighborhood Info: Located in a modern, tech-savvy neighborhood in Austin, TX, this smart home is part of a growing community of innovative homes. The area is well-connected with fiber optic internet and is close to tech hubs and co-working spaces.\n",
+      "Location: Austin, TX\n",
+      "Neighborhood: Tech Community\n",
+      "Property Type: Smart Home\n",
+      "Year Built: 2024 CE\n",
+      "Price: $1,500,000\n",
+      "Bedrooms: 5\n",
+      "Bathroom: 4.0\n",
+      "Area: 4500 sq.ft.\n",
+      "Listed Date: 2025-04-17\n",
+      "\n",
       "\n"
      ]
     }
